@@ -70,6 +70,11 @@ class MagicWord {
 		'localweek',
 		'localdow',
 		'revisionid',
+		'revisionday',
+		'revisionday2',
+		'revisionmonth',
+		'revisionyear',
+		'revisiontimestamp',
 		'subpagename',
 		'subpagenamee',
 		'displaytitle',
