@@ -270,6 +270,11 @@ $magicWords = array(
 	'localweek'              => array( 1,    'LOCALWEEK'              ),
 	'localdow'               => array( 1,    'LOCALDOW'               ),
 	'revisionid'             => array( 1,    'REVISIONID'             ),
+	'revisionday'            => array( 1,    'REVISIONDAY'            ),
+	'revisionday2'           => array( 1,    'REVISIONDAY2'           ),
+	'revisionmonth'          => array( 1,    'REVISIONMONTH'          ),
+	'revisionyear'           => array( 1,    'REVISIONYEAR'           ),
+	'revisiontimestamp'      => array( 1,    'REVISIONTIMESTAMP'      ),
 	'plural'                 => array( 0,    'PLURAL:'                ),
 	'fullurl'                => array( 0,    'FULLURL:'               ),
 	'fullurle'               => array( 0,    'FULLURLE:'              ),
